# careguard-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
careguard/: __init__.py  cli.py  config.py
careguard/agentic/: __init__.py  attacker.py  comparison.py  evaluator.py  evidence.py  jobs.py  judge.py  models.py  objectives.py  orchestrator.py  reports.py  routes.py  stop_conditions.py  strategies.py
careguard/api/: app.py
careguard/audit/: __init__.py  agentic.py  (+2 more)
careguard_guard/: __init__.py  config.py  models.py  pipeline.py
configs/: agentic-healthcare-objectives.yaml  careguard-guard.example.yaml  careguard.example.yaml  healthcare-policy-pack.yaml
demo_health_agent/: __init__.py  engine.py
docs/: agentic-audit.md  agentic-evidence.md  agentic-objectives.md  agentic-operator-safety.md  agentic-threat-model.md  architecture.md  company-onboarding.md  company-pilot.md  connector-guide.md  dashboard-guide.md  dashboard-security.md  guard-pipeline.md  human-review-workflow.md  policy-configuration.md  policy-coverage.md  pre-stage-3-validation.md  product-roadmap.md  public-case-study.md  public-demo-guide.md  scenario-design.md  threat-model.md  tool-control.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
scripts/: smoke_test.py
tests/: test_pre_stage3_hardening.py  test_stage1.py  test_stage2_guard.py  test_stage3_dashboard.py  test_stage4_agentic.py
(+76 files in other folders)
