[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "careguard-ai"
version = "0.3.0"
description = "Synthetic local healthcare AI security audit and runtime guard"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "pydantic>=2.8,<3",
  "PyYAML>=6,<7",
  "httpx>=0.27,<1",
  "SQLAlchemy>=2,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["careguard*", "demo_health_agent*"]
